@@ -2,20 +2,21 @@ package seedu.fitchasers.user;
 
 import seedu.fitchasers.ui.UI;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
+import java.util.Collections;
 
 /**
  * Represents a person using the FitChasers app.
  * Stores the person's name and their weight history.
  */
-public class Person {
 
+public class Person {
 
     private final UI ui = new UI();
     private String name;
@@ -78,7 +79,7 @@ public class Person {
      * @return A List of WeightRecord objects
      */
     public List<WeightRecord> getWeightHistory() {
-        return Collections.unmodifiableList(new ArrayList<>(weightHistory));
+        return List.copyOf(weightHistory);
     }
 
 
@@ -93,7 +94,7 @@ public class Person {
         }
 
         StringBuilder sb = new StringBuilder();
-        sb.append("Here's your weight, you've been killin' it lately!\n");
+        sb.append("Here's your weight, you've been killing it lately!\n");
 
         for (int i = 0; i < weightHistory.size(); i++) {
             sb.append("  ").append(weightHistory.get(i));
@@ -147,7 +148,7 @@ public class Person {
 
         // Sort records by date ascending
         List<WeightRecord> sortedRecords = new ArrayList<>(weightHistory);
-        sortedRecords.sort((r1, r2) -> r1.getDate().compareTo(r2.getDate()));
+        sortedRecords.sort(Comparator.comparing(WeightRecord::getDate));
 
         List<Double> weights = new ArrayList<>();
         List<String> dates = new ArrayList<>();
@@ -163,9 +164,9 @@ public class Person {
             return;
         }
 
-        final int height = 10;
-        final int spacing = 12;
-        final int maxWidthColumns = 12;
+        int height = 10;
+        int spacing = 12;
+        int maxWidthColumns = 12;
 
         List<Double> displayWeights = new ArrayList<>();
         List<String> displayDates = new ArrayList<>();
@@ -186,11 +187,13 @@ public class Person {
         double max = Collections.max(displayWeights);
         int width = (displayWeights.size() - 1) * spacing + 1;
 
+        if (min == max) {
+            max = min + 1;
+        }
+
         char[][] grid = new char[height][width];
         for (int i = 0; i < height; i++) {
-            for (int j = 0; j < width; j++) {
-                grid[i][j] = ' ';
-            }
+            Arrays.fill(grid[i], ' ');
         }
 
         int[] y = new int[displayWeights.size()];
@@ -251,6 +254,7 @@ public class Person {
         for (int i = 0; i < height; i++) {
             double label = max - (max - min) * i / (height - 1);
             System.out.printf("%6.1f | ", label);
+            System.out.print(" ");
             for (int j = 0; j < width; j++) {
                 if (isWeightPoint[i][j]) {
                     System.out.print(orange + "\u25CF" + reset);
